fix: prevent task item jump on touch during editing (#65)

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,7 +15,7 @@
   font-size: 40px;
   color: var(--theme-text-header);
   position: relative;
-  z-index: 1;
+  z-index: 10;
 }
 
 .themeButton {
